Funcons-beta/Computations/Abnormal/Failing/tests/else.config
general {
    funcon-term: 
      finalise-failing finalise-abrupting
      sequential(
        else(fail, print 1),
        print else(2, fail),
        else(print 3, fail),
        handle-abrupt(
          else(abrupt(true), print 99), 
          print 4),
        else(fail, fail, print 5)
      )
        ;
}

tests {
    result-term: null-value;
    standard-out: [1, 2, 3, 4, 5];
}
